--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body, html {
 img {
     width: 300px;
     height: 300px;
+    border-radius: 5px;
 }
 
 .descricao {
@@ -48,8 +49,8 @@ progress {
 }
 
 .ponto {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     background-color: #eee;
     border-radius: 50%;
     margin-left: -10px;
